--- a/askme-start-parent/cors-start-askme/pom.xml
+++ b/askme-start-parent/cors-start-askme/pom.xml
@@ -10,12 +10,9 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>cors-start-parent</artifactId>
+    <artifactId>cors-start-askme</artifactId>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
