--- a/askme-start-parent/pom.xml
+++ b/askme-start-parent/pom.xml
@@ -24,7 +24,7 @@
         <module>dubbo-start-askme</module>
         <module>excel-start-askme</module>
         <module>valid-start-askme</module>
-        <module>cors-start-parent</module>
+        <module>cors-start-askme</module>
     </modules>
 
     <dependencies>
