--- a/askme-chatgpt/pom.xml
+++ b/askme-chatgpt/pom.xml
@@ -62,6 +62,11 @@
             <artifactId>nutz</artifactId>
             <version>1.r.68.v20190220</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+            <version>2021.0.5.0</version>
+        </dependency>
 <!--        &lt;!&ndash;redis&ndash;&gt;-->
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
