--- a/askme-base/askme-utils/pom.xml
+++ b/askme-base/askme-utils/pom.xml
@@ -47,6 +47,10 @@
             <groupId>ma.glasnost.orika</groupId>
             <artifactId>orika-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
     </dependencies>
 
 
